@@ -1,4 +1,4 @@
-/* Generated by GOB (v0.93.0)   (do not edit directly) */
+/* Generated by GOB (v1.0.4)   (do not edit directly) */
 
 #include <gtk/gtk.h>
 
@@ -14,10 +14,16 @@ extern "C" {
  * Type checking and casting macros
  */
 #define TYPE_TITLE_ITEM	(title_item_get_type())
-#define TITLE_ITEM(obj)	GTK_CHECK_CAST((obj),title_item_get_type(),TitleItem)
-#define TITLE_ITEM_CLASS(klass)	GTK_CHECK_CLASS_CAST((klass),title_item_get_type(),TitleItemClass)
+#define TITLE_ITEM(obj)	GTK_CHECK_CAST((obj), title_item_get_type(), TitleItem)
+#define TITLE_ITEM_CONST(obj)	GTK_CHECK_CAST((obj), title_item_get_type(), TitleItem const)
+#define TITLE_ITEM_CLASS(klass)	GTK_CHECK_CLASS_CAST((klass), title_item_get_type(), TitleItemClass)
 #define IS_TITLE_ITEM(obj)	GTK_CHECK_TYPE((obj), title_item_get_type ())
 
+#ifdef GTK_CHECK_GET_CLASS
+#define TITLE_ITEM_GET_CLASS(obj)	GTK_CHECK_GET_CLASS((obj), title_item_get_type(), TitleItemClass)
+#else /* !GTK_CHECK_GET_CLASS */
+#define TITLE_ITEM_GET_CLASS(obj)	((TitleItemClass *)GTK_OBJECT(obj)->klass)
+#endif /* GTK_CHECK_GET_CLASS */
 
 /*
  * Main object structure
@@ -43,7 +49,7 @@ struct _TitleItemClass {
  * Public methods
  */
 guint	title_item_get_type	(void);
-GtkWidget *	title_item_new	(void);
+GtkWidget * 	title_item_new	(void);
 
 #ifdef __cplusplus
 }
