@@ -1,3 +1,7 @@
+Fri Aug 11 18:11:40 2000  George Lebl <jirka@5z.com>
+
+	* title-item.[ch]: recompiled with new gob
+
 Fri Aug 11 16:40:41 2000  George Lebl <jirka@5z.com>
 
 	* gnome-panel-properties.c, panel_config_global.h, session.c,
